# behaviour_labeling

./: README.md  config.py  main.py  pyproject.toml  ruff.toml
src/: __main__.py  app.py  config.py  frame_processor.py  record.py  types.py  utils.py
